--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
+
+# Ide
+.vscode/*
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -26,7 +29,7 @@ go.work.sum
 
 # env file
 .env
-
+.pyenv
 .run
 
 # temporary
