--- a/misc/config.yaml
+++ b/misc/config.yaml
@@ -1,4 +1,3 @@
 port: 8080
 postgres_url: "postgres://postgres:postgres@localhost:5432/postgres"
-jwt_signing_key: "./config_example/jwt_signing_key"
-log_file: "./log.txt"
+jwt_signing_key: "./misc/jwt_signing_key"
