--- a/load_tests/makefile
+++ b/load_tests/makefile
@@ -11,5 +11,9 @@ install:
 	source .venv/bin/activate
 	python3 -m pip install  -r requirements.txt
 
+# writes requiremets list to file
+requirements:
+	pip freeze > requirements.txt
+
 run-web:
 	locust --host http://localhost:8080
