improve load_tests

--- a/load_tests/makefile
+++ b/load_tests/makefile
@@ -16,4 +16,6 @@ requirements:
 	pip freeze > requirements.txt
 
 run-web:
-	locust --host http://localhost:8080
+	locust -f tests,loads --class-picker --host http://localhost:8080 --processes 16
+
+
