--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,21 @@
 services:
   postgres:
     image: postgres:16.4
+    shm_size: 256mb
+    command: |
+        postgres
+          -c shared_preload_libraries=pg_stat_statements
+          -c pg_stat_statements.track=all
+          -c max_connections=200
+          -c shared_buffers=256MB
+          -c effective_cache_size=8GB
+          -c work_mem=16MB
+          -c maintenance_work_mem=128MB
+          -c min_wal_size=128MB
+          -c max_wal_size=2GB
+          -c checkpoint_completion_target=0.9
+          -c wal_buffers=16MB
+          -c default_statistics_target=100
     ports:
       - 5432:5432
     volumes:
@@ -12,6 +27,7 @@ services:
 
   grafana:
     image: grafana/grafana:11.1.4
+    shm_size: 256mb
     ports:
       - 3000:3000
     extra_hosts:
@@ -22,6 +38,7 @@ services:
 
   prometheus:
     image: prom/prometheus:v2.54.0
+    shm_size: 256mb
     user: root
     ports:
       - 9090:9090
