--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,10 +16,16 @@ services:
           -c checkpoint_completion_target=0.9
           -c wal_buffers=16MB
           -c default_statistics_target=100
+    healthcheck:
+      test: ["CMD-SHELL", "psql -U postgres -d postgres -c 'SELECT 1' || exit 1"]
+      interval: 2s
+      timeout: 10s
+      retries: 5
     ports:
       - 5432:5432
     volumes:
       - postgres-volume:/var/lib/postgresql/data
+      - ./sql:/docker-entrypoint-initdb.d
     environment:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
@@ -72,7 +78,7 @@ services:
       - 4318:4318 # OTLP http receiver
 
   tempo-init:
-    image: &tempoImage grafana/tempo:2.3.1
+    image: &tempoImage grafana/tempo:r177-60780f7
     user: root
     entrypoint:
       - "chown"
