--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: postgres:16.4
+    image: postgres:16.4-alpine
     shm_size: 256mb
     command: |
         postgres
