--- a/deploy/prometheus.yml
+++ b/deploy/prometheus.yml
@@ -34,6 +34,6 @@ scrape_configs:
   - job_name: 'machine'
     scrape_interval: 2s
     static_configs:
-      - targets: ['host.docker.internal:9100']
+      - targets: ['node_exporter:9100']
         labels:
           group: 'backend'
