--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -4,6 +4,7 @@ certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
 ConfigArgParse==1.7
+exceptiongroup==1.2.2
 Flask==3.0.3
 Flask-Cors==4.0.1
 Flask-Login==0.6.3
@@ -11,12 +12,16 @@ gevent==24.2.1
 geventhttpclient==2.3.1
 greenlet==3.0.3
 idna==3.7
+iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 locust==2.31.3
 MarkupSafe==2.1.5
 msgpack==1.0.8
+packaging==24.2
+pluggy==1.5.0
 psutil==6.0.0
+pytest==8.3.4
 pyzmq==26.1.0
 requests==2.32.3
 tomli==2.0.1
