--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -54,17 +54,17 @@ services:
       - prometheus-volume:/etc/prometheus
       - ./deploy/prometheus.yml:/etc/prometheus/prometheus.yml
 
-  node_exporter:
-    image: quay.io/prometheus/node-exporter:latest
-    command:
-      - '--path.rootfs=/host'
-    ports:
-      - 9100:9100
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
-    pid: host
-    volumes:
-      - '/:/host:ro,rslave'
+  # node_exporter:
+  #   image: quay.io/prometheus/node-exporter:latest
+  #   command:
+  #     - '--path.rootfs=/host'
+  #   ports:
+  #     - 9100:9100
+  #   extra_hosts:
+  #     - "host.docker.internal:host-gateway"
+  #   pid: host
+  #   volumes:
+  #     - '/:/host:ro,rslave'
 
   otel-collector:
     image: otel/opentelemetry-collector-contrib:0.108.0
