--- a/cmd/coworker/config.yaml
+++ b/cmd/coworker/config.yaml
@@ -1,11 +1,13 @@
 app:
-  serviceUrl: "https://localhost:8080"
+  serviceUrl: "http://localhost:8080"
 kafka:
   brokers:
-   - localhost:9092
-  topic: backend_events
+   - localhost:9091
+  topic: events
+  consumerGroupId: AAAA
 smtp:
-  server: smtp.yandex.ru
-  port: 587
-  email: ""
-  password: ""
+  server: localhost
+  port: 12333
+  login: "maillogin"
+  password: "mailpass"
+  email: "coworker@example.com"
