--- a/cmd/shortlinks/conf.yml
+++ b/cmd/shortlinks/conf.yml
@@ -1,3 +1,4 @@
+service_url: http://localhost:8081
 http_port: 8081
 grpc_port: 8082
 postgres_url: "postgres://postgres:postgres@localhost:5432/postgres"
